--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,9 @@ Title: EUFLOW: Expected utility workflow guidance system
 Version: 0.1
 Date: 2016-06-17
 Author: Kevin K McDade
-Maintainer: kkm5@pitt.edu
+Maintainer: Kevin K McDade <kkm5@pitt.edu>
 Description: A user provides a reference dataset which is a dataframe with measurement points by sample identifiers and alternative evaluation sets on the same measurement points and sample identifiers
 License: What license is it under?
 LazyData: TRUE
+Depends: IdMappingAnalysis
 RoxygenNote: 5.0.1
