--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,6 @@ Description: A user provides a reference dataset which is a dataframe with measu
 License: What license is it under?
 LazyData: TRUE
 Depends: IdMappingAnalysis
+Suggests: knitr
 RoxygenNote: 5.0.1
+VignetteBuilder: knitr
