Per 'http://r-pkgs.had.co.nz/vignettes.html' (read it all!), added rmarkdown to Suggests. To install, do this: devtools::install(build_vignettes = TRUE); not the Build and Reload button.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Description: A user provides a reference dataset which is a dataframe with measu
 License: What license is it under?
 LazyData: TRUE
 Depends: IdMappingAnalysis
-Suggests: knitr
+Suggests: knitr,
+    rmarkdown
 RoxygenNote: 5.0.1
 VignetteBuilder: knitr
