Change name of WorkflowEvaluationData to WorkflowPathData, still builds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(Model.quality.list)
 export(Workflow.Criterion)
 export(Workflow.Evaluation.table)
 export(Workflow.posteriorestimate)
-export(WorkflowEvaluationData)
+export(WorkflowPathData)
 export(assign.status)
 export(expectedUtility)
 export(fit2clusters.workflow)
